# Project_Eagle

./: pyproject.toml  requirements-dev.txt
core/: cache.py  config.py  constants.py  data.py  exceptions.py  logger.py  utils.py  validator.py
core/features/: __init__.py  base.py  builder.py  drawdown.py  returns.py  volatility.py
data/: __init__.py  cache.py  data.py  manager.py  validator.py
data/features/: base.py  builder.py  drawdown.py  returns.py  volatility.py
data/providers/: __init__.py  base.py  yahoo.py
tests/: test_data.py
